--- a/_config.yml
+++ b/_config.yml
@@ -22,16 +22,14 @@ title: grtetrault's blog
 email: grtetrault@pm.me
 description: >- # this means to ignore newlines until "baseurl:"
   A simple blog for everyone to see.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # The subpath of your site, e.g. /blog
+url: "" # The base hostname & protocol for your site, e.g. http://example.com
 github_username:  grtetrault
 linkedin_username: garretttetrault
 
 permalink: /:year/:long_month/:title
 
-# Build settings
 theme: minima
-
 show_excerpts: true
 
 # Exclude from processing.
