--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: "" # The base hostname & protocol for your site, e.g. http://example.com
 github_username: grtetrault
 linkedin_username: garretttetrault
 
-permalink: /:year/:long_month/:title
+permalink: /:year/:month/:title
 
 theme: minima
 
