--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: grtetrault's blog
+title: Garrett Tetrault
 email: grtetrault@pm.me
 description: >- # this means to ignore newlines until "baseurl:"
   A simple blog for everyone to see.
@@ -31,7 +31,7 @@ permalink: /:year/:month/:title
 
 theme: minima
 
-show_excerpts: true
+show_excerpts: false
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
