--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Garrett Tetrault
-email: grtetrault@pm.me
+email: "grtetrault [at] pm [dot] me"
 description: >- # this means to ignore newlines until "baseurl:"
-  A collection of interesting ideas I've encountered.
+  An open collection of interesting ideas with a focus on computer science and mathematics.
 baseurl: "" # The subpath of your site, e.g. /blog
 url: "" # The base hostname & protocol for your site, e.g. http://example.com
 github_username: grtetrault
