--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: "grtetrault (at) pm (dot) me"
 github_username: grtetrault
 linkedin_username: garretttetrault
 
-url: "https://grtetrault.github.io/"
+url: "https://grtetrault.github.io"
 baseurl: ""
 
 blog: /blog
