Adding unsafe html to commonmark options

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 markdown: CommonMarkGhPages
+commonmark:
+  options: ["UNSAFE", "FOOTNOTES"]
+  extensions: ["table"]
 
 title: Garrett Tetrault
 author: Garrett Tetrault
